Improve setup instructions and explicitly include Editorconfig

--- a/game/.vscode/extensions.json
+++ b/game/.vscode/extensions.json
@@ -1,6 +1,7 @@
 {
     "recommendations": [
         "sumneko.lua",
-        "tomblind.local-lua-debugger-vscode"
+        "tomblind.local-lua-debugger-vscode",
+        "editorconfig.editorconfig"
     ]
 }
